[package]
name = "bluefang-player"
version = "0.1.0"
edition = "2021"

[features]
debug = ["iced/debug"]

[dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
iced = { version = "0.12.1", default-features = false, features = ["tokio", "advanced"] }
tokio = { version = "1.16.1", features = ["time", "rt"] }
pin-project-lite = "0.2.14"
bluefang = { path = "../bluefang" }
instructor = { git = "https://github.com/sidit77/instructor.git" }
bytes = "1.6.0"
cpal = "0.15.3"
sbc-rs = { git = "https://github.com/sidit77/sbc-rs.git" }
rubato = { version = "0.15.0", default-features = false }
ringbuf = "0.4.1"
portable-atomic = { version = "1", features = ["float"] }
souvlaki = "0.7.3"

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package."tiny-skia"]
opt-level = 3