[package]
name = "bluefang-player"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[features]
debug = ["iced/debug"]

[dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-panic = { version = "0.1.2", features = ["capture-backtrace"] }
tracing-appender = "0.2.3"
tracing = "0.1.40"

iced = { version = "0.12.1", default-features = false, features = ["tokio", "advanced"] }

tokio = { version = "1.16.1", features = ["time", "rt"] }
bluefang = { path = "../bluefang" }

souvlaki = "0.7.3"
minreq = { version = "2.11.2", features = ["https"] }

portable-atomic = { version = "1", features = ["float"] }
ringbuf = "0.4.1"
instructor = { git = "https://github.com/sidit77/instructor.git" }
bytes = "1.6.0"
directories = "5.0.1"
once_cell = "1.19.0"

cpal = { git = "https://github.com/sidit77/cpal.git" }
sbc-rs = { git = "https://github.com/sidit77/sbc-rs.git" }
rubato = "0.15.0"


[profile.dev.package."*"]
opt-level = 2

[profile.dev.package."tiny-skia"]
opt-level = 3